# landlord-ai

./: .gitignore  CMakeLists.txt  README.md
include/: card_iter.h  card_set.h  cards.h  components.h  constant.h  game.h  main_loop.h  player.h  scene.h  shape.h  utils.h
include/components/: button.h  image.h  mouse_state.h  text.h  window.h
src/: card_iter.cpp  card_set.cpp  cards.cpp  components.cpp  game.cpp  image.cpp  main.cpp  mouse_state.cpp  player.cpp  scene.cpp  shape.cpp
